openjdk23/jdk/test/langtools/tools/javac/annotations/neg/NoDefaultAbstract.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */
@interface NoDefaultAbstract {
    default int m();
}
